# RDMA-Playground

./: .gitignore  README.md
rc-pingpong/: CMakeLists.txt  rc-pingpong.c
rdma_ring_buffer_cpp/: meson.build  ref_ring_buffer.hpp
rdma_ring_buffer_rust/: .env  Cargo.toml  justfile
rdma_ring_buffer_rust/adapter/: Cargo.toml
rdma_ring_buffer_rust/adapter/src/: atomic_extension.rs  command_line.rs  main.rs  rdma_controller.rs
rdma_ring_buffer_rust/host/: Cargo.toml
rdma_ring_buffer_rust/host/src/: command_line.rs  main.rs  rdma_adapter.rs
rdma_ring_buffer_rust/loopback/: Cargo.toml
rdma_ring_buffer_rust/loopback/src/: client.rs  main.rs  server.rs  spec.rs
rdma_ring_buffer_rust/shared/: Cargo.toml
rdma_ring_buffer_rust/shared/benches/: ring_buffer.rs
rdma_ring_buffer_rust/shared/src/: ipc.rs  lib.rs  rdma_controller.rs  ref_ring_buffer.rs  ring_buffer.rs
rdma_ring_buffer_rust/shared/src/ipc/: ring_buffer_metadata.rs
rdma_ring_buffer_rust/shared/src/rdma_controller/: config.rs  memory_region.rs  send.rs  work_completion.rs
rdma_ring_buffer_rust/shared/src/ref_ring_buffer/: reader.rs  reader_chunk.rs  receiver.rs  sender.rs  writer.rs  writer_chunk.rs
rdma_ring_buffer_rust/shared/tests/: ring_buffer.rs
rdma_ring_buffer_rust/src/: atomic_extension.rs  command_line.rs  communication_manager.rs  main.rs  rdma_controller.rs  rdma_ring_buffer.rs
rdma_ring_buffer_rust/src/rdma_controller/: config.rs  qp_info.rs
