[package]
name = "shared"
version = "0.1.0"
edition = "2021"

[dependencies]
bytemuck = "1.15.0"
criterion = "0.5.1"
crossbeam = "0.8.4"
derivative = "2.2.0"
divan = "0.1.14"
nix = "0.28.0"
rand = "0.8.5"
rdma-sys = "0.3.0"
shared_memory = "0.12.4"
uninit = { version = "0.6.2", features = ["zerocopy"] }
zerocopy = { version = "0.7.32", features = ["derive"] }

[[bench]]
name = "ring_buffer"
harness = false

[[test]]
name = "ring_buffer"
path = "tests/ring_buffer.rs"


[profile.bench]
debug = true
